# mcp-chromium-advanced

./: .gitignore  AGENTS.md  README.md  README_zh.md  build_chromium_manage_gui_exe.ps1  chromium_profiles.example.json  pyproject.toml  pytest.ini  release-manifest.json  requirements.txt  run_gui.py  run_gui_launcher.py
chromium_advanced/: __init__.py  action_pipeline.py  automation_runner.py  browser_action_orchestrator.py  browser_action_registry.py  browser_capability_kernel.py  browser_session_kernel.py  browser_session_kernel_diagnostics.py  browser_session_kernel_watchers.py  chromium_manage_gui.py  chromium_profile_lib.py  engine_strategy.py  i18n.py  keepalive_registry.py  keepalive_runtime.py  mcp_daemon.py  mcp_runtime_config.py  mcp_server.py  mirror_manager.py  occupancy_registry.py  official_playwright_mcp_bridge.py  session_manager.py  session_runtime_cleanup.py  session_runtime_view.py  update_service.py  version.py
dev_plan/: 20260616_runtime_performance_and_engine_rearchitecture_plan.md  20260617_official_mcp_capability_alignment_plan.md  20260618_idle_cpu_governance_plan.md  20260618_official_mcp_alignment_iteration_2.md  20260619_official_mcp_browser_core_alignment_plan.md  20260619_official_mcp_browser_core_mapping.md  20260620_browser_core_gap_closure_master_plan.md  20260620_official_mcp_experience_alignment_round2_plan.md
docs/: AI_INSTALLATION_RUNBOOK.md  ARCHITECTURE_GUIDE.md  BROWSER_CORE_VALIDATION_PLAYBOOK.md  CROSS_PLATFORM_RELEASE_PLAN.md  DAEMON_AUTOMATION_INTEGRATION.md  INDUSTRIAL_RUNTIME_UPGRADE_PLAN.md  README.md  release_readme.md  (+3 more)
(+82 files in other folders)
