[project]
name = "mcp-chromium-advanced"
version = "0.1.0"
description = "Advanced Chromium profile manager and MCP automation workspace"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "fastmcp",
  "fastapi",
  "httpx",
  "patchright",
  "psutil",
  "PyQt5",
  "selenium",
  "undetected-chromedriver",
  "uvicorn",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["run_gui"]

[tool.setuptools.packages.find]
include = ["chromium_advanced*"]
